[gd_scene load_steps=3 format=2]

[ext_resource path="res://background.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Root" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Progress" type="ProgressBar" parent="."]
margin_left = 18.0
margin_top = 14.0
margin_right = 1006.0
margin_bottom = 50.0
rect_min_size = Vector2( 988, 36 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Cards" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Cards"]
margin_left = 28.0
margin_top = 479.0
margin_right = 116.0
margin_bottom = 571.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Cards"]
margin_left = 36.8111
margin_top = 489.871
margin_right = 76.8111
margin_bottom = 503.871
text = "Deck:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saved" type="Label" parent="Cards"]
margin_left = 39.2001
margin_top = 538.207
margin_right = 79.2001
margin_bottom = 552.207
text = "Saved:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardSlot1" type="Button" parent="Cards"]
margin_left = 332.98
margin_top = 413.947
margin_right = 482.98
margin_bottom = 563.947
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardSlot2" type="Button" parent="Cards"]
margin_left = 532.234
margin_top = 413.947
margin_right = 682.234
margin_bottom = 563.947
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="Cards"]
margin_left = 824.584
margin_top = 468.703
margin_right = 938.584
margin_bottom = 503.703
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Cards/CardSlot1" to="." method="_on_CardSlot1_pressed"]
[connection signal="pressed" from="Cards/CardSlot2" to="." method="_on_CardSlot2_pressed"]
[connection signal="pressed" from="Cards/Confirm" to="." method="_on_Confirm_pressed"]
