[gd_scene load_steps=7 format=2]

[ext_resource path="res://gfx/background.png" type="Texture" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://sfx/hitHurt.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/blipSelect.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/CardButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/TextureProgress.tscn" type="PackedScene" id=6]

[node name="Root" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
centered = false

[node name="TextureProgress" parent="." instance=ExtResource( 6 )]
margin_left = 21.9405
margin_top = 113.173
margin_right = 957.94
margin_bottom = 158.173

[node name="Progress" type="ProgressBar" parent="."]
visible = false
margin_left = 18.0
margin_top = 14.0
margin_right = 1006.0
margin_bottom = 50.0
rect_min_size = Vector2( 988, 36 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Cards"]
margin_left = 28.0
margin_top = 479.0
margin_right = 247.0
margin_bottom = 571.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Cards"]
margin_left = 36.0
margin_top = 489.0
margin_right = 240.0
margin_bottom = 559.0
text = "info..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardSlot1" parent="Cards" instance=ExtResource( 5 )]
margin_left = 352.757
margin_top = 309.345
margin_right = 300.005
margin_bottom = 495.825

[node name="CardSlot2" parent="Cards" instance=ExtResource( 5 )]
margin_left = 554.273
margin_top = 310.097
margin_right = 501.521
margin_bottom = 496.577

[node name="SelectPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="HurtPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="Cards/CardSlot1" to="." method="_on_choose_left_pressed"]
[connection signal="pressed" from="Cards/CardSlot2" to="." method="_on_choose_right_pressed"]
